--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
     <TextView
+    android:textSize="30sp"
+    android:text="View 1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"/>
+    <TextView
         android:textSize="30sp"
-        android:text="View 1"
+        android:text="View 2"
+        android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-
+    <TextView
+        android:textSize="30sp"
+        android:text="View 3"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:textSize="30sp"
+        android:text="View 4"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
