--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,22 +11,17 @@
         android:id="@+id/TextView1"
         android:textSize="30sp"
         android:text="View 1"
-        android:layout_centerInParent="true"
+        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@id/TextView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
-        android:layout_above="@id/TextView1"
+        android:id="@+id/TextView2"
         android:textSize="30sp"
         android:text="View 2"
-        android:layout_toLeftOf="@id/TextView1"
+        android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-    <TextView
-        android:layout_below="@id/TextView1"
-        android:textSize="30sp"
-        android:text="View 3"
-        android:layout_toRightOf="@id/TextView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+
 
 </RelativeLayout>
